# nonogram-solver

./: .gitignore  CMakeLists.txt  Readme.md
resources/: mushroom.json
src/: Board.cpp  Board.h  Common.cpp  Common.h  NonogramSolver.cpp  NonogramSolver.h  PuzzleSquare.h  main.cpp
viewer/: board.json  styles.css  underscore.js  viewer.html  viewer.js
